<resources>
    <string name="app_name">ColegioApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>

    <string name="menu_contactos">Contacto</string>
    <string name="menu_admin">Administrador</string>
    <string name="menu_cursos">Cursos</string>
    <string name="menu_avisos">Avisos</string>
    <string name="menu_notas">Notas</string>
    <string name="menu_act">Actividades</string>
    <string name="menu_contacto">Contactanos</string>
    <string name="menu_ajustes">Ajustes</string>
</resources>
