<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cursos"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_cursos" />
        <item
            android:id="@+id/nav_avisos"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_avisos" />
        <item
            android:id="@+id/nav_notas"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_notas" />
        <item
            android:id="@+id/nav_actividades"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_act" />
    </group>

    <item android:title="@string/menu_contactos">
        <menu>
            <item
                android:id="@+id/nav_contactacnos"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_contacto" />
        </menu>
    </item>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_admin"
                android:icon="@drawable/ic_menu_admin"
                android:title="@string/menu_admin" />
            <item
                android:id="@+id/nav_ajustes"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_ajustes" />
        </menu>
    </item>
</menu>
